Fix HTML encoding issues in references.html

--- a/references.html
+++ b/references.html
@@ -73,6 +73,10 @@
         </li>
 
         <li>
+         Manus AI. (2026). Manus [General AI agent]. https://manus.im
+        </li>
+          
+        <li>
           Lee, J., & Zhang, H. (2024).
           <em>Economic impacts of catalytic reforming on refinery product portfolios.</em>
         </li>
@@ -115,3 +119,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
