--- a/process.html
+++ b/process.html
@@ -163,6 +163,8 @@
         <figcaption class="figure-caption">
           Figure 1. Typical catalytic naphtha reforming flow: heavy naphtha feed is hydrotreated, heated, reformed in
           multi-stage reactors, then separated into hydrogen (recycle/byproduct) and stabilized reformate.
+
+          Note. Infographic created by Manus AI (2026) based on data from Britannica (n.d.), IvyPanda (2004), and Rahimpour et al. (2013). 
         </figcaption>
       </figure>
     </div>
@@ -182,6 +184,8 @@
         <figcaption class="figure-caption">
           Figure 2. Relationship between aromatic content and octane number in reformate: increasing aromatic concentration
           generally increases octane rating.
+
+          Note. Infographic created by Manus AI (2026) based on data from Britannica (n.d.), IvyPanda (2004), and Rahimpour et al. (2013). 
         </figcaption>
       </figure>
 
@@ -196,3 +200,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
