--- a/references.html
+++ b/references.html
@@ -100,6 +100,14 @@
         </li>
 
         <li>
+          Britannica Editors (2015, March 12). Draper Prize. Encyclopedia Britannica. https://www.britannica.com/science/Draper-Prize
+        </li>
+
+        <li>
+          Мастерская. (2018). Былое и думы. Сергей Эйгенсон: Байки давних лет. https://club.berkovich-zametki.com/?p=40708
+        </li>
+
+        <li>
           Waddams, A., Carruthers, J. E., & Solomon, L. H. (2023, October 30).
           Petroleum refining.
           <em>Encyclopedia Britannica.</em>
@@ -119,4 +127,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
