Add figure captions for Haensel images

--- a/history.html
+++ b/history.html
@@ -95,6 +95,7 @@
             <div class="haensel-section">
                 <div class="haensel-image">
                     <img src="haensel.jpg" alt="Vladimir Haensel" class="portrait-image">
+                    <p> Fig 3. Vladimir Haensel. (Мастерская, 2018) </p>
                 </div>
                 <div class="haensel-info">
                     <div class="two-column">
@@ -118,6 +119,7 @@
                     </div>
                     <div class="prize-image">
                         <img src="draper_prize.webp" alt="Charles Stark Draper Prize" class="award-image">
+                        <p> Fig 4. The draper prize. (Britannica, 2015) </p>
                     </div>
                 </div>
             </div>
